--- a/src/client/features/chat/components/MessageList.module.css
+++ b/src/client/features/chat/components/MessageList.module.css
@@ -8,7 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: min-content;
+	min-height: 0;
 	margin: 0;
 	padding: 0;
 }
